--- a/welcome/templates/welcome/test_shooter.html
+++ b/welcome/templates/welcome/test_shooter.html
@@ -35,8 +35,8 @@ a:active {color: #11BBFF; text-decoration: none;}
 </style>
 
 {% load static %}
-<script src="{% static "js/lib/three.min.js" %}"></script>
-<script src="{% static "js/lib/OrbitControls.js" %}"></script>
+<script src="{% static "js/three.min.js" %}"></script>
+<script src="{% static "js/OrbitControls.js" %}"></script>
 <script src="{% static "js/oimo.js" %}"></script>
 
 </head>
