--- a/welcome/templates/welcome/firebase.html
+++ b/welcome/templates/welcome/firebase.html
@@ -309,6 +309,7 @@ $ git push</pre>
 	}(document, 'script', 'facebook-jssdk'));</script>
                 <h2>Request information</h2>
 <pre>
+{{ users }}
 Server hostname: {{ hostname }}
 Database server: {{ database.engine }} ({{ database.url }})
 {% if database.is_sqlite %}<span class="warning">Data persistence warning: You are currently using SQLite. This is fine for development, but your data won't be persisted across application deployments.</span>{% endif %}
